# typo

./: .cursorrules  .env.example  .gitignore  .mise.toml  AGENTS.md  CORE.md  DEPLOYMENT.md  DESIGN.md  DEV.md  README.md  README.zh.md  TASK.md  TODO.md  env.example  eslint.config.js  macos_accessibility_client.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pr_review.json  pr_threads.json  pr_threads_v2.json  skills-lock.json  uno.config.ts  vite.config.ts  vitest.config.ts
.claude/: settings.json
.gemini/: settings.json
.gemini/policies/: default.toml  workspace.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  core-ci.yml  core-deploy.yml  core-push-image.yml  desktop-ci.yml  desktop-release.yml  packages-ci.yml  pr-format-fix.yml  pr-title-check.yml  release..yml  (+2 more)
core/: Dockerfile  Gemfile
docs/: linux-deep-link-setup.md  product-analysis.md  urgent-product-improvements.md
scripts/: bump.sh  core-commands.sh  core-curl-apis.sh  core-shortcuts.sh  generate-notes.js  release-notes.sh  ubuntu-global-shortcut.sh  ubuntu-shortcut.sh  www-deploy.sh
src/: App.vue  Settings.vue  ai.ts  main.ts  shortcut.ts  shortcut_policy.spec.ts  shortcut_policy.ts  slashCommands.ts  store.ts  types.ts  utils.ts  vite-env.d.ts  window.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: accelerator_xdg.rs  keyboard.rs  lib.rs  linux_global_shortcuts.rs  session_linux.rs  shortcut_status.rs  tray.rs  utils.rs  wl_clipboard.rs
todos/: desktop-device-login.md
(+427 files in other folders)
